# media

./: settings.gradle
demos/main/: Untitled.jks  build.gradle
demos/main/noDecoderExtensions/release/: output-metadata.json
demos/main/src/main/: AndroidManifest.xml
demos/main/src/main/java/androidx/media3/demo/main/: SampleChooserActivity.java  UrlTestActivity.java
demos/main/src/main/res/layout/: activity_url_test.xml  sample_chooser_activity.xml
demos/main/withDecoderExtensions/debug/: output-metadata.json
libraries/common/src/main/java/androidx/media3/common/: Timeline.java
libraries/decoder_ffmpeg/: build.gradle
libraries/decoder_ffmpeg/src/main/: ffmpeg
libraries/decoder_ffmpeg/src/main/cpp/: CMakeLists.txt  VideoDecodeContext.cc  ffmpeg_jni.cc
libraries/decoder_ffmpeg/src/main/cpp/include/libswscale/: swscale.h
libraries/decoder_ffmpeg/src/main/cpp/videodecoder/: LogUtil.h  VideoDecoder.cc  VideoDecoder.h
libraries/decoder_ffmpeg/src/main/java/androidx/media3/decoder/ffmpeg/: FfmepgVideoDecoder.java  FfmpegOutputFrame.java  FfmpegVideoRenderer.java
libraries/decoder_ffmpeg/src/main/jni/: build_ffmpeg.sh
libraries/exoplayer/src/main/java/androidx/media3/exoplayer/: DefaultRenderersFactory.java  ExoPlayerImplInternal.java
libraries/exoplayer/src/main/java/androidx/media3/exoplayer/source/: ProgressiveMediaPeriod.java  ProgressiveMediaSource.java  SinglePeriodTimeline.java
libraries/extractor/src/main/java/androidx/media3/extractor/: SeekMap.java
libraries/extractor/src/main/java/androidx/media3/extractor/flv/: FlvExtractor.java  (+1 more)
(+1 files in other folders)
